# learning-to-anticipate-flexible-choices

./: .gitignore  100_percent_adherence_backlog.md  ASMOO_ASMS_EMOA_EXPERIMENTAL_PLAN.md  ASMOO_ASMS_EMOA_EXPERIMENTAL_RESULTS.md  BNN_ANALYSIS_AND_IMPROVEMENT_PLAN.md  CHANGES_LOG.md  EPIC0_BNN_FEASIBILITY_REPORT.md  EPIC1_5_COMPLETE_DOCUMENTATION.md  EPIC1_5_COMPLETION_SUMMARY.md  EPIC1_5_DIAGNOSTIC_FINDINGS.md  EPIC1_5_DIAGNOSTIC_SUCCESS_REPORT.md  EPIC1_5_ENHANCED_KALMAN_PLAN.md  EPIC1_5_FINAL_SUMMARY.md  EPIC1_5_HYBRID_ONLINE_LEARNING_SUCCESS.md  EPIC1_5_PERFORMANCE_ANALYSIS.md  EPIC1_5_PHASE1_PARAMETER_TUNING_SUCCESS.md  EPIC1_5_PROGRESS_REPORT.md  EPIC1_5_RMSE_ANALYSIS.md  EPIC1_5_RMSE_INVESTIGATION_SUMMARY.md  EPIC1_5_SUCCESS_REPORT.md  EPIC1_5_TECHNICAL_DOCUMENTATION.md  EPIC1_PROGRESS_REPORT.md  HVDM_OPTIMIZATION_PLAN.md  Makefile  README.md  REVISED_BNN_IMPLEMENTATION_PLAN.md  THESIS_CITATIONS.md  experiment_1_simplified_20251018_225059.json  experiment_2_hybrid_integration_20251018_225744.json  pyproject.toml  repository_analysis.md  thesis_codebase_analysis.md
.claude/: settings.json
.dfg/: .reflect-backfill-cursor.json  README.md  context-map.yaml  events.jsonl  plan.yaml  state.json
docs/: ANALYTICS-PLAN.md  BACKLOG.md  CROSS-VALIDATION-A-RISK.md  CROSS-VALIDATION-B-ROI.md  CROSS-VALIDATION-C-BIVARIATE-GAUSSIAN.md  CROSS-VALIDATION-D-KF-GAUSSIANS.md  CROSS-VALIDATION-F-TIP.md  CROSS-VALIDATION-G-ANTICIPATIVE-RATE.md  CROSS-VALIDATION-H-DIRICHLET-VARIANT.md  CROSS-VALIDATION-I-ANTICIPATIVE-DISTRIBUTIONS.md  CROSS-VALIDATION-J-CROWDING-DISTANCE.md  CROSS-VALIDATION-K-EXPECTED-HV.md  CROSS-VALIDATION-L-NDS.md  CROSS-VALIDATION-M-MUTATION.md  CROSS-VALIDATION-N-CROSSOVER.md  CROSS-VALIDATION-V2-REASSESSMENT.md  EXPERIMENT-VALIDATION-PLAN.md  H4-ASSET-UNIVERSE-EDA.md  HYPOTHESIS-LOG.md  NDS-VERIFICATION-W15-4.md  OOS-EFHV-REPORT.md  OOS-EFHV-W15-INTEGRATION-SMOKE.md  OOS-EFHV-W16-INTEGRATION-SMOKE.md  OOS-EFHV-W17-5-CARRY-1-RESMOKE.md  OOS-EFHV-W17-INTEGRATION-SMOKE.md  OOS-EFHV-WALK-FORWARD-REPORT.md  READING-E-EXPERIMENTAL-TEST.md  READING-F-EXPERIMENTAL-TEST.md  THESIS-INDEX.md  VALIDATION-RESULTS.md  VALIDATION-RESULTS.populated.md  VISION.md  W18-CROSS-VALIDATION-SYNTHESIS.md  W19-CROSS-VALIDATION-SYNTHESIS.md  W20-5-CORRECTION-READING-F-INVERSION.md  W20-CROSS-VALIDATION-SYNTHESIS.md  W21-1-HONEST-REVISION-N10-RESULTS.md  W21-5-ABLATION-PROTOCOL.md  W21-5-PHASE-B-KILL-AND-SAVE.md  W21-5-PHASE-C-LAUNCH-PROTOCOL.md  (+128 more)
legacy-cpp/: README.md
legacy-cpp-v2/: README.md  UPSTREAM-README.md
python_refactor/: data_analysis.py  (+29 more)
(+646 files in other folders)
