[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learning-to-anticipate-flexible-choices"
version = "0.1.0"
description = "Python implementation of Azevedo & Von Zuben (2015) — Anticipatory MCDM under Uncertainty (IEEE TCYB)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Carlos R. B. Azevedo", email = "renatoaz@gmail.com" },
]
keywords = [
    "anticipatory-learning",
    "multi-objective-optimization",
    "kalman-filter",
    "dirichlet-dynamical",
    "portfolio-optimization",
    "mcdm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

# Runtime dependencies lifted from python_refactor/requirements.txt
# (numpy/pandas/scipy/matplotlib/scikit-learn). Versions match the
# constraints there; W2-4 doesn't introduce uv.lock — locked installs
# are a separate concern.
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/crbazevedo/learning-to-anticipate-flexible-choices"
Paper = "https://doi.org/10.1109/TCYB.2015.2415732"

[tool.hatch.build.targets.wheel]
# The Python sources live at python_refactor/src/. Future units will
# consolidate this layout; W2-4 ships the minimal pyproject without
# rearranging the tree.
packages = ["python_refactor/src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "legacy-cpp",  # frozen C++ tree; not Python
]

[tool.ruff.lint]
# Default ruleset + explicit F401 (unused imports) since pre-W2-4
# legacy files carried 11 F401 errors closed in this unit.
select = ["F", "E", "W", "I"]
ignore = [
    "E501",  # line-too-long: legacy files have long lines; future
              # cleanup unit can re-enable.
]

[tool.pytest.ini_options]
testpaths = ["python_refactor/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
